Fix: overflow-x in app.module.scss

--- a/renderServer/components/common/app.module.scss
+++ b/renderServer/components/common/app.module.scss
@@ -3,6 +3,7 @@ body {
 }
 .container {
   margin: -8px;
+  overflow-x: hidden;
 
   .bodybackground {
     background-color: #e9ecef;
